--- a/StatisticsStyle.css
+++ b/StatisticsStyle.css
@@ -50,10 +50,10 @@ html, body{
   /*Style for round images*/
   .Stats-Pic{
     display: flex;
-    border-radius: 70%;
+    border-radius: 100%;
     max-width: 50%;
     max-width: 50%;
-    margin: -65% 0% 50% 25%;;
+    margin: -55% 0% 50% 25%;;
 
     
   }
@@ -61,8 +61,11 @@ html, body{
   .Stat-Info{
     color: white;
     margin: auto;
+    /* justify-content: center; */
 
   }
+
+ 
 
   .Stat-Title{
     font-size: 5em;
@@ -70,13 +73,16 @@ html, body{
   }
 
   .Stat-Name{
-    margin: 0em 5em 0em 5em;
+    /* margin: 0em 5em 0em 5em; */
+    display: flex;
+    justify-content: center;
+
   }
 
   .Stat-Holder{
-
     font-size: 2rem;
-    text-align: center;
+    display: flex;
+    justify-content: center;
    
   }
 
